--- a/client/project-three-peapod/src/components/shared/Footer.css
+++ b/client/project-three-peapod/src/components/shared/Footer.css
@@ -1,16 +1,14 @@
-footer {
+.main-footer {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    padding: 20px;
+    flex-direction: row;
+    justify-items: center;
+   justify-content: space-around;
     color: black;
-    height: 200px;
-    
+
 }
 
 .left {
-    list-style: none; 
+    list-style: none;
 }
 
 .middle {
@@ -18,26 +16,39 @@ footer {
 }
 
 .right {
-   list-style: none;
-} 
+    list-style: none;
+}
 
-.icons {
+.social-icons {
     color: #58782C; 
     display: flex;
-    justify-content: center; 
+    justify-content: center;
+    justify-content: space-around;
+    padding-left: 250px;
+    padding-right: 250px;
+   
 }
 
-/* .legal {
+.legal-list {
     display: flex;
+    flex-direction: row;
+    list-style: none;
     justify-content: center;
+    padding-top: 5px;
+   
+} 
+.legal-term {
+    padding-right: 30px;
 }
 
-.privacy {
+.copyright {
     display: flex;
+    flex-direction: column;
+    list-style: none;
     justify-content: center;
+    align-items: center;  
+    padding-left: 30px;
+   
 }
 
-.rights {
-    display: flex;
-    justify-content: center;
-} */
+
