--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -1,41 +1,51 @@
 
-.peapod-Logo{
-    display: flex;
-    justify-content: center;
-    padding: 15px;
-}
-
-.home-nav h4 h5 {
+.center-nav {
     display: flex;
     justify-content: flex-end;
-    /* font-size: 20px; 
-    padding-right: 25px;  */
-    /* padding-top: 20px; */
-
-}
-
-.signIn {
-    /* display: flex;
-    justify-content: flex-end; */
-    /* font-size: 15px; 
-    padding-right: 20px;
-    padding-top: -3px; */
-    color: #878F3D;
-}
-
+    height: 12vh;
+  }
+  
+  .peapod-Logo {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+  }
+  
+  .account {
+    padding-left: 28vw;
+    padding-right: 2vw;
+  }
+  
+  .sign-in {
+      border: none;
+  }
+  .sign-in a{
+    text-decoration: none;
+    color:#58782C; 
+    
+  }
 .cover {
     background-image: url('https://i.imgur.com/YuqrxXU.png');
     height: 120vh;
    
 }
 
-.cover h3 {
+.cover h2 {
     font-family: 'Roboto', sans-serif;
     padding: 200px;
     font-size: 50px;
     display: flex;
-    padding-right: 450px;
-    padding-left: 450px;
     flex-direction: column;
     justify-content: center;
+    padding-right: 450px;
+    padding-left: 450px;
+}
+
+.cover h3 p {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 450px;
+    padding-left: 450px;
 }
