--- a/client/project-three-peapod/src/components/ProductCard.css
+++ b/client/project-three-peapod/src/components/ProductCard.css
@@ -6,21 +6,44 @@ p {
 .product-cards {
   box-shadow: 0px 0px 3px 1px #cecece;
   margin: 17px 17px;
-  padding: 10px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product-cards img {
+  max-height: 200px;
+}
+
+.thumbnail-image {
+  height: 200px;
+  width: 200px;
+  border: 8px solid white;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .price-button-div {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: center;
   font-weight: 600;
+  font-size: 12px;
+  width: 100%;
 }
 
-.add-to-cart {
+.price-button-div button {
+  margin: 0;
+  border: 0;
+  border-radius: 0;
+  font-size: inherit;
   background-color: #4D6E22;
   color: #FFFFFF;
-  height: 30px;
-  margin-left: 5px;
+  width: 50%;
+}
+
+.price-lower {
+  width: 50%;
 }
