--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -25,12 +25,13 @@
     color:#58782C; 
     text-decoration: none;
     font-size: 15px;
+   
     
   }
 .cover {
     background-image: url('https://i.imgur.com/YuqrxXU.png');
-    /* height: 120vh; */
-   
+    background-repeat: no-repeat;
+    height: 120vh;   
 }
 
 .cover h2 {
@@ -105,5 +106,4 @@ button {
   margin: 40px;
   padding: 5px 10px 5px 10px;
   width: 15vw;
-  
 }
