--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -18,10 +18,10 @@
     padding-right: 2vw;
   }
   
-  .sign-in {
+  .sign{
       border: none;
   }
-  .sign-in a{
+  .sign a{
     color:#58782C; 
     text-decoration: none;
     font-size: 15px;
@@ -31,7 +31,10 @@
 .cover {
     background-image: url('https://i.imgur.com/YuqrxXU.png');
     background-repeat: no-repeat;
+    background-size: cover;
     height: 120vh;   
+  
+
 }
 
 .cover h2 {
