--- a/client/project-three-peapod/src/components/shared/navigation/Nav.css
+++ b/client/project-three-peapod/src/components/shared/navigation/Nav.css
@@ -2,32 +2,40 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  border: 2px solid red;
 }
 
 .drop-down {
   display: flex;
   flex-direction: row;
-  border: 2px solid blue;
+
 }
 
-.shop {
-  padding-left: 40px;
-}
 
 .guest-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
-  border: 2px solid red;
-}
+  width: 300px;
+  padding: 15px;
+  margin-left: 50px;
+  
 
-.guest {
-  margin-top:2px;
 }
 
 .person {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
   font-size: 30px;
+  width: 60px;
+  margin:0 auto;
+}
+
+.guest{
+  font-size: 15px;
+  padding-top: 5px;
+  margin: 0px;
 }
 
 .logo {
@@ -45,10 +53,6 @@
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-}
-
-.search {
-  padding: 0px 200px;
 }
 
 .input {
