--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -2,90 +2,156 @@
 .center-nav {
     display: flex;
     justify-content: flex-end;
-    height: 12vh;
-    padding-top: 50px;
-    padding-bottom: 0px;
+    height: 7vh;
+    padding-top: 20px;
+    padding-bottom: 30px; 
+    font-size: 18px; 
   }
   
-  .peapod-Logo {
-    display: flex;
-    justify-content: center;
-    padding-top: 15px;
-  }
   
-  .account {
+  .account p {
+    color: #7c7472;
+    padding-top: 10px; 
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
     padding-left: 28vw;
     padding-right: 2vw;
+ 
   }
   
   .sign{
       border: none;
   }
   .sign a{
-    color:#58782C; 
+    font-family: 'Roboto', sans-serif;
+    color:#878f3d; 
     text-decoration: none;
-    font-size: 15px;
-   
-    
+    font-size: 15px;  
   }
+
 .cover {
     background-image: url('https://i.imgur.com/YuqrxXU.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 120vh;   
-  
-
+    margin-top: -150px;
 }
 
 .cover h2 {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: center;
-    font-family: 'Roboto', sans-serif;
-    font-size: 50px;
-    padding: 200px;
-    padding-right: 450px;
-    padding-left: 450px;
-    padding-bottom: 0px;
+    justify-content: center; */
+    /* font-family: 'Roboto', sans-serif;
+    font-size: 48px; */
+    /* padding-top: 200px;
+    padding-right: 445px;
+    padding-left: 445px;
+    padding-bottom: 0px; */
+}
+
+.shop h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 48px;
+  padding-top: 200px;
+  padding-left: 400px;
+  padding-right: 445px;
+  text-align: center;
+}
+
+.of h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 48px;
+  padding-left: 440px;
+  padding-right: 440px;
+  text-align: center;
+  margin-top: -40px;
+}
+
+.your h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 48px;
+  padding-left: 440px;
+  padding-right: 440px;
+  text-align: center;
+  margin-top: -40px;
+}
+
+.bus h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 48px;
+  padding-left: 440px;
+  padding-right: 440px;
+  text-align: center;
+  margin-top: -40px;
 }
 
 .cover h3 {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
-    padding-right: 450px;
-    padding-left: 450px;
+    padding-right: 475px;
+    padding-left: 475px;
+    margin-top: -35px;
    
 }
 
 .cover p {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  padding-right: 450px;
-  padding-left: 450px;
+  font-size: 30px;
+  padding-right: 500px;
+  padding-left: 500px;
+  margin-top: -30px;
 }
-
 
 .radio {
   display: flex;
   justify-content: space-evenly;
   position: relative;
-  font-size: 22px;   
-  padding-left: 160px;
-  padding-right: 160px;
+  font-size: 16px;   
+  font-family: 'Roboto', sans-serif;
+  padding-left: 550px;
+  padding-right: 550px;
   margin-bottom: 12px;
+  margin-top: 15px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
 }
+
+.radio .checkmark {
+  height: 25px;
+  width: 25px;
+  background-color: black;
+  border-radius: 50%;
+}
+.radio input:checked ~ .circle {
+  background-color: white;
+}
+
+.radio input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.radio .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
+
 
 .search-home {
   display: flex;
   justify-content: center; 
 }
-
 
 
 .search-input {
@@ -98,15 +164,21 @@
   width: 20vw;
 }
 
+/* .search-plus-button {
+ 
+} */
+
 button {
   background-color: #4d6e22;
   border: 1px solid #ddd;
-  border-radius: 20px;
+  border-radius: 30px;
   color: white;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   letter-spacing: 0.1px;
   margin: 40px;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 5px 5px 5px;
   width: 15vw;
 }
+
+
