--- a/client/project-three-peapod/src/components/Product.css
+++ b/client/project-three-peapod/src/components/Product.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     padding: 20px 20px;
-    width: 80%;
+    width: 100%;
 }
 
 .thumbnail-image {
@@ -39,18 +39,28 @@
   height: 60px;
 }
 
-.price-button-div {
+.suggestions-div {
+  width: 15%;
   display: flex;
-  justify-content: center;
+  padding: 0px 20px;
+  flex-direction: column;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-left-color: lightgray;
+}
+
+.price-button-div-item {
+  display: flex;
+  justify-content: space-evenly;
   flex-direction: row;
   align-items: center;
   font-weight: 600;
   font-size: 12px;
   width: 100%;
-  padding: 20px 20px;
+  padding: 20px 20px 0 20px;
 }
 
-.price-button-div button {
+.price-button-div-item button {
   margin: 0;
   border: 0;
   border-radius: 0;
@@ -58,16 +68,12 @@
   font-size: inherit;
   background-color: #4D6E22;
   color: #FFFFFF;
-  width: 15%;
 }
 
 .info-div-sub {
   margin: 0 50px;
   font-weight: bolder;
   height: 200px;
-}
-.price-lower {
-  width: 20%;
 }
 
 .edit-delete-div {
@@ -91,4 +97,14 @@
     margin: 0px;
     padding: 7px;
     width: 10%;
+}
+
+.nutrition-div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 80%;
+}
+
+.nutrition-div img {
 }
