--- a/client/project-three-peapod/src/components/ProductsContainer.css
+++ b/client/project-three-peapod/src/components/ProductsContainer.css
@@ -5,8 +5,9 @@
 }
 
 .component-nav {
-  display: inline-block;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   color: white;
   background-color: black;
   font-weight: bolder;
@@ -15,17 +16,14 @@
   padding: 20px 0px;
 }
 
-.close-out-button {
-  float: left;
-  background-color: darkgray;
-  color: white;
-  width: 40px;
-  height: 40px;
+.back-button {
+  width: 60px;
+  height: 60px;
   margin-left: 10px;
 }
 
-.close-out-button span {
-  vertical-align: middle;
+.section-title {
+  width: 90%;
 }
 
 .containter-div {
@@ -43,11 +41,18 @@
    font-weight: bolder;
  }
 
+ .main-section {
+   display: flex;
+   flex-direction: row;
+   width: 100%;
+ }
+
  .product-gallery {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-top: -13px;
  }
 
 .add-button {
