--- a/client/project-three-peapod/src/components/ProductsContainer.css
+++ b/client/project-three-peapod/src/components/ProductsContainer.css
@@ -9,16 +9,15 @@
   flex-direction: row;
   align-items: center;
   color: white;
-  background-color: black;
+  background-color: #2D2D2D;
   font-weight: bolder;
-  font-size: 25px;
+  font-size: 18px;
   text-align: center;
-  padding: 20px 0px;
 }
 
 .back-button {
-  width: 60px;
-  height: 60px;
+  width: 45px;
+  height: 45px;
   margin-left: 10px;
 }
 
@@ -33,14 +32,25 @@
  }
 
  .headline {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   width: 95%;
-   font-size: 12px;
-   font-weight: bolder;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 85%;
+  font-size: 12px;
+  font-weight: bolder;
+  margin-left: 188px;
  }
 
+ .entire-middle-section {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+ }
+
+ .side-nav-section {
+  width: 15%;
+ }
+ 
  .main-section {
    display: flex;
    flex-direction: row;
