--- a/client/project-three-peapod/src/components/shared/navigation/Nav.css
+++ b/client/project-three-peapod/src/components/shared/navigation/Nav.css
@@ -7,40 +7,36 @@
 .drop-down {
   display: flex;
   flex-direction: row;
-
 }
-
 
 .guest-container {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  width: 300px;
+  width: 500px;
   padding: 15px;
   margin-left: 50px;
-  
-
 }
 
 .person {
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   font-size: 30px;
   width: 60px;
-  margin:0 auto;
+  margin: 0 10px;
 }
 
-.guest{
+.guest {
   font-size: 15px;
   padding-top: 5px;
   margin: 0px;
 }
 
 .logo {
-  height: 15vh;
-  width: 17vw;
+  height: 100px;
+  width: 300px;
 }
 
 .arrow {
@@ -66,5 +62,16 @@
 }
 
 .input::placeholder {
+  font-size: 15px;
+}
+
+.sign-out {
+  width: 250px;
+  margin: 25px;
+}
+
+.sign-out a{
+  text-decoration: none;
+  color: #4d6e22;
   font-size: 15px;
 }
