--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -6,7 +6,9 @@
     padding-top: 20px;
     padding-bottom: 30px; 
     font-size: 18px; 
+    /* padding-left: 200px; */
   }
+  
   
   
   .account p {
@@ -14,8 +16,8 @@
     padding-top: 10px; 
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    padding-left: 28vw;
-    padding-right: 2vw;
+    padding-left: 375px;
+    padding-right: 20px;
  
   }
   
@@ -37,23 +39,11 @@
     margin-top: -150px;
 }
 
-.cover h2 {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center; */
-    /* font-family: 'Roboto', sans-serif;
-    font-size: 48px; */
-    /* padding-top: 200px;
-    padding-right: 445px;
-    padding-left: 445px;
-    padding-bottom: 0px; */
-}
-
 .shop h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 48px;
-  padding-top: 200px;
-  padding-left: 400px;
+  padding-top: 250px;
+  padding-left: 410px;
   padding-right: 445px;
   text-align: center;
 }
@@ -61,7 +51,7 @@
 .of h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 48px;
-  padding-left: 440px;
+  padding-left: 400px;
   padding-right: 440px;
   text-align: center;
   margin-top: -40px;
@@ -70,7 +60,7 @@
 .your h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 48px;
-  padding-left: 440px;
+  padding-left: 420px;
   padding-right: 440px;
   text-align: center;
   margin-top: -40px;
@@ -79,7 +69,7 @@
 .bus h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 48px;
-  padding-left: 440px;
+  padding-left: 420px;
   padding-right: 440px;
   text-align: center;
   margin-top: -40px;
@@ -90,7 +80,7 @@
     justify-content: center;
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
-    padding-right: 475px;
+    padding-right: 500px;
     padding-left: 475px;
     margin-top: -35px;
    
@@ -101,7 +91,7 @@
   justify-content: center;
   font-family: 'Roboto', sans-serif;
   font-size: 30px;
-  padding-right: 500px;
+  padding-right: 520px;
   padding-left: 500px;
   margin-top: -30px;
 }
@@ -120,53 +110,48 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
-  
-}
-
-.radio .checkmark {
-  height: 25px;
-  width: 25px;
-  background-color: black;
-  border-radius: 50%;
-}
-.radio input:checked ~ .circle {
-  background-color: white;
-}
-
-.radio input:checked ~ .checkmark:after {
-  display: block;
-}
-
-.radio .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: white;
+  user-select: none; 
 }
 
 
-.search-home {
+.buttonhome {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
+  height: 90%;
+  width: 50%;
+  padding-left: 50px;
+  padding-right: 20px;
+}
+.buttonbus {
+  height: 90%;
+  width: 60%;
+}
+.search-plus-button {
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  background-size: contain;
+  /* padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 1px;
+  padding-right: 1px; */
+  height: 80px;
+  width: 420px;
+
+}
+.search-plus-button a{
+  position: absolute;
+  top: -10px;
+  right: -40px;
 }
 
-
-.search-input {
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  font-size: 18px;
-  letter-spacing: 0.1px;
+.zipbar {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 0px;
+  padding-right: 0px;
   margin: 40px;
-  padding: 10px 10px 5px 10px;
-  width: 20vw;
 }
-
-/* .search-plus-button {
- 
-} */
 
 button {
   background-color: #4d6e22;
@@ -177,8 +162,10 @@ button {
   font-size: 18px;
   letter-spacing: 0.1px;
   margin: 40px;
-  padding: 5px 5px 5px 5px;
-  width: 15vw;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 
