edited styling on product card and products container edited home page styling edited shopping list styling

--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -124,25 +124,23 @@
 }
 .buttonbus {
   height: 90%;
-  width: 60%;
+  width: 55%;
 }
 .search-plus-button {
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
   background-size: contain;
-  /* padding-top: 1px;
-  padding-bottom: 1px;
-  padding-left: 1px;
-  padding-right: 1px; */
   height: 80px;
   width: 420px;
+  margin: 0 auto;
 
 }
 .search-plus-button a{
   position: absolute;
-  top: -10px;
+  top: -20px;
   right: -40px;
+  padding-right: 5px;
 }
 
 .zipbar {
@@ -162,8 +160,8 @@ button {
   font-size: 18px;
   letter-spacing: 0.1px;
   margin: 40px;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 0px;
   padding-right: 0px;
 }
