--- a/client/project-three-peapod/src/components/ProductCard.css
+++ b/client/project-three-peapod/src/components/ProductCard.css
@@ -1,12 +1,15 @@
 p {
   font-size: 13px;
+  font-family: 'Roboto', sans-serif;
   margin: 5px 5px;
 }
 
 .product-cards {
-  box-shadow: 0px 0px 3px 1px #cecece;
+  box-shadow: 2px 3px 5px 1px #cecece;
   margin: 17px 17px;
   text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +27,15 @@ p {
   overflow: hidden;
 }
 
+.product-info h5 {
+  margin-bottom: 0;
+}
+
+.product-info p {
+   padding-bottom: 20px;
+   margin: 0 5px 5px 5px;
+}
+
 .price-button-div {
   display: flex;
   flex-direction: row;
@@ -31,6 +43,7 @@ p {
   align-items: center;
   font-weight: 600;
   font-size: 12px;
+  font-family: 'Roboto', sans-serif;
   width: 100%;
   padding: 20px 20px 0 20px;
 }
@@ -40,7 +53,9 @@ p {
   border: 0;
   border-radius: 0;
   font-size: inherit;
-  background-color: #4D6E22;
+  font-family: 'Roboto', sans-serif;
+  background-color: #58782c;
+  font-weight: bold;
   color: #FFFFFF;
   width: 50%;
 }
