--- a/client/project-three-peapod/src/components/ShoppingList.css
+++ b/client/project-three-peapod/src/components/ShoppingList.css
@@ -1,3 +1,22 @@
+
+.shopping-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  background-color: #2D2D2D;
+  font-weight: bolder;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  
+}
+
+.shopping-bar h3{
+   text-align:center;
+}
+
+
+
 .h1 {
     text-align: center;
 }
