--- a/client/project-three-peapod/src/components/SideNav/SideNavAisleCard.css
+++ b/client/project-three-peapod/src/components/SideNav/SideNavAisleCard.css
@@ -1,7 +1,7 @@
 .aisle-card{
     border: 1px solid black;
-    max-width: 100px;
-    
+    max-width: 200px;
+    padding: 10px 0px;
    
 }
 
@@ -9,6 +9,6 @@
     text-decoration: none;
     color: black;
     list-style: none;
-    
+   
 }
 
