--- a/client/project-three-peapod/src/components/SideNav/SideNavAllAisles.css
+++ b/client/project-three-peapod/src/components/SideNav/SideNavAllAisles.css
@@ -1,6 +1,6 @@
 .propsName{
     border: 1px solid black;
-    max-width: 100px;
+    max-width: 190px;
     padding-top: 15px;
     padding-bottom: 15px;
 }
@@ -8,9 +8,13 @@
 ul {
     display: block;
     list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding-inline-start: 0px;
+}
+
+li{
+    padding: 5px;
 }
