updating styles for ItemDetail

--- a/client/project-three-peapod/src/components/ProductsContainer.css
+++ b/client/project-three-peapod/src/components/ProductsContainer.css
@@ -32,6 +32,16 @@
   align-items: center;
  }
 
+ .view-all {
+   display: flex;
+   flex-direction: row;
+ }
+
+ .plus-sign {
+  font-size: 18px;
+  margin: 14px;
+ }
+
  .headline {
   display: flex;
   flex-direction: row;
