--- a/client/project-three-peapod/src/components/Product.css
+++ b/client/project-three-peapod/src/components/Product.css
@@ -3,17 +3,12 @@
 .entire-main-section {
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
 }
 
 /* X AXIS */
 .x-axis-main-section {
   width: 75%;
-}
-
-.y-axis-main-section {
-  width: 25%;
-  display: flex;
-  flex-direction: column;
 }
 
 .main-info-div {
@@ -57,22 +52,37 @@
 
 .ratings-icon {
   height: 15px;
+  margin-right: 5px;
 }
 
 .small_chat-icon {
   height: 60px;
 }
 
+.info-div-stars {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.info-div-stars p {
+  margin: 0;
+  margin: 0;
+  color: #4D6E22;
+  text-decoration: underline;
+}
+
 .price-button-div-item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-direction: row;
   align-items: center;
   font-weight: 600;
-  width: 100%;
+  width: 35%;
   padding: 20px 20px 0 20px;
   margin-left: 55%;
 }
+
 .price-button-div-item img {
   max-width: 200px;
 }
@@ -83,12 +93,12 @@
 }
 
 .price-button-div-item-text p {
+  margin-right: 45px;
   font-size: 13px;
   margin: 5px 10px 0px 0px;
   color: darkgrey;
   font-style: italic;
 }
-
 
 .price-lower-item {
   margin-right: 15%;
@@ -103,13 +113,23 @@
 
 .edit-delete-div {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
   padding: 20px;
+  width: 40%;
 }
 
 .edit-link {
-  padding: 2px 10px;
+  text-decoration: none;
+  background: #4d6e22;
+  color: white;
+  border-radius: 2px;
+  padding: 8px;
+  margin: 5px;
+  text-align: center;
+  font-size: 12px;
+  width: 40%;
+  font-weight: 600;
 }
 
 .delete-button {
@@ -118,10 +138,11 @@
   border-radius: 3px;
   color: white;
   font-family: 'Roboto', sans-serif;
+  font-weight: 600;
   font-size: 12px;
-  margin: 0px;
-  padding: 7px;
-  width: 10%;
+  margin: 5px;
+  padding: 8px;
+  width: 43.5%;
 }
 
 .nutrition-div {
@@ -129,6 +150,7 @@
   justify-content: center;
   flex-direction: column;
   width: 100%;
+  margin-top: 15px;
 }
 
 .nutrition-div img {
@@ -155,8 +177,8 @@
 
 .info-for-nutrition {
   display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 .info-for-nutrition h3 {
@@ -164,7 +186,7 @@
 }
 
 .nutrition-split-div {
-  width: 60%;
+  width: 70%;
 }
 
 .nutrition-title {
@@ -196,7 +218,7 @@
 }
 
 .substitute-item-div {
-  width: 40%;
+  width: 30%;
 }
 
 .substitute-item-title {
@@ -238,6 +260,12 @@
 
 /* Y AXIS */
 
+.y-axis-main-section {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+}
+
 .suggestions-div {
   width: 75%;
   padding: 0px 20px;
@@ -259,6 +287,18 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 0 0 10px 0;
+}
+
+.single-suggested-info-div {
+  width: 50%;
+}
+
+.single-suggested-info-div h6 {
+  margin: 0;
+}
+
+.single-suggested-info-div p {
+  margin: 0;
 }
 
 .single-suggested-button-price-div {
