--- a/client/project-three-peapod/src/components/ProductCreate.css
+++ b/client/project-three-peapod/src/components/ProductCreate.css
@@ -1,16 +1,31 @@
+.header-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .create-form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: flex-start;
   width: 50%;
   margin: 0 auto;
+  border: 1px solid lightgray
 }
 
 .textarea-description {
   margin: 0;
 }
 
+.button-div {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+}
+
 .submit-button {
   margin: 0 auto;
   border-radius: 3px;
+  width: 15%;
+  padding: 8px;
 }
