--- a/client/project-three-peapod/src/components/ProductEdit.css
+++ b/client/project-three-peapod/src/components/ProductEdit.css
@@ -1,7 +1,6 @@
 .product-edit {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 55vw;
   height: 95vh;
   margin: 0 auto;
@@ -24,6 +23,9 @@
 }
 
 .image-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 50vw;
   margin: 0 auto;
   padding: 10px 0;
@@ -37,11 +39,11 @@
   margin-top: 25px;
 }
 
-form.edit-form {
+.edit-form2 {
   width: 50vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
   margin: 0px;
 }
 
