--- a/client/project-three-peapod/src/components/Home.css
+++ b/client/project-three-peapod/src/components/Home.css
@@ -6,6 +6,7 @@
     padding-top: 20px;
     padding-bottom: 30px; 
     font-size: 18px; 
+    min-width: ;
     /* padding-left: 200px; */
   }
   
