--- a/client/project-three-peapod/src/components/SideNav/SideNavProduce.css
+++ b/client/project-three-peapod/src/components/SideNav/SideNavProduce.css
@@ -16,22 +16,39 @@
 
 
 
-.produce-list{
+.produce-list {
     padding: 0px;
     margin: 0px;
+    
 }
 
 
-.produce, .meat, .seafood, .meal-kits, .deli, .dairy, .beverages, .bread{
+.side-produce, .side-meat, .side-seafood, .side-meal-kits, .side-deli, .side-dairy, .side-beverages, .side-bread{
+    display: flex;
+    flex-direction: row;
     border:1px solid black;
     max-width: 190px;
     list-style: none;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    margin: 0px 0px
+    padding-bottom: 1px;
+    padding-top: 1px;
+    margin: 0px 0px;
+    align-items: center;
+    
+}
+
+.dd-dropdown a {
+    text-decoration: none;
+    color: black;
 }
 
 .produce-class, .meat-class, .seafood-class, .kits-class, .deli-class, .dairy-class, .beverages-class, .bread-class{
-   height: 50px;
-   width: 50px;
+   height: 30px;
+   width: 30px;
+   object-fit: cover;
+   padding-right: 15px;
+   padding-left: 5px;
+}
+
+h3{
+    font-weight: lighter;
 }
