--- a/client/project-three-peapod/src/components/shared/navigation/Nav.css
+++ b/client/project-three-peapod/src/components/shared/navigation/Nav.css
@@ -3,10 +3,29 @@
   flex-direction: row;
   align-items: center;
 }
+.drop-down {
+  display: flex;
+  flex-direction: row;
+}
+
+.mobile-container {
+  display: flex;
+  flex-direction: row;
+  width: 400px;
+}
+
+.burger {
+  display: none;
+  flex-direction: column;
+  font-size: min(40px, 50px);
+  margin-bottom: 50px;
+  padding: 5px;
+}
 
 .drop-down {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .guest-container {
@@ -14,9 +33,10 @@
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  width: 500px;
+  width: 510px;
   padding: 15px;
-  margin-left: 50px;
+  margin-left: 650px;
+  margin-bottom: 0px;
 }
 
 .person {
@@ -28,6 +48,11 @@
   margin: 0 10px;
 }
 
+.search {
+  display: flex;
+  align-items: center;
+}
+
 .guest {
   font-size: 15px;
   padding-top: 5px;
@@ -35,6 +60,7 @@
 }
 
 .logo {
+  width: 170px;
   height: 100px;
   width: 300px;
 }
@@ -45,12 +71,10 @@
   display: inline-block;
   padding: 5px;
 }
-
 .down {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
 }
-
 .input {
   width: 20vw;
   height: 7vh;
@@ -60,18 +84,120 @@
   padding-left: 30px;
   left: 80px;
 }
-
 .input::placeholder {
   font-size: 15px;
 }
 
 .sign-out {
-  width: 250px;
+  width: 200px;
   margin: 25px;
 }
 
-.sign-out a{
+.sign-out a {
   text-decoration: none;
   color: #4d6e22;
   font-size: 15px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
+  .nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .mobile-container {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+  }
+
+  .burger {
+    display: flex;
+    flex-direction: column;
+    font-size: min(40px, 50px);
+    margin-bottom: 50px;
+    padding: 5px;
+  }
+
+  .drop-down {
+    display: none;
+    flex-direction: row;
+  }
+
+  .guest-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 75px;
+    padding: 0px;
+    margin-bottom: 50px;
+    margin-left: 0px;
+  }
+
+  .person {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 30px;
+    width: 60px;
+    margin: 0 10px;
+  }
+
+  .guest {
+    font-size: 15px;
+    padding-top: 5px;
+    margin: 0px;
+    display: none;
+  }
+
+  .search {
+    display: flex;
+    align-items: center;
+  }
+
+  .logo {
+    height: 50px;
+    width: 170px;
+    object-fit: cover;
+  }
+
+  .arrow {
+    border: solid #4d6e22;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    padding: 5px;
+  }
+
+  .down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+
+  .input {
+    width: 10vw;
+    height: 7vh;
+    background-image: url(./glass.png);
+    background-size: 20px;
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    left: 80px;
+  }
+
+  .input::placeholder {
+    font-size: 15px;
+  }
+
+  .sign-out {
+    width: 250px;
+    margin: 25px;
+    display: none;
+  }
+
+  .sign-out a {
+    text-decoration: none;
+    color: #4d6e22;
+    font-size: 15px;
+  }
 }
