--- a/client/project-three-peapod/src/components/SideNav/SideNavAllAisles.css
+++ b/client/project-three-peapod/src/components/SideNav/SideNavAllAisles.css
@@ -18,3 +18,34 @@ ul {
 li{
     padding: 5px;
 }
+
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+    .dd-dropdown{
+        text-decoration: none;     
+        width: 375px;
+        display: block;
+        /* border: 2px solid red; */
+    }
+
+    ul {
+        display: block;
+        list-style-type: disc;
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        padding-inline-start: 0px;
+        width: 100%;
+    }
+    
+    .propsName{
+        border: 1px solid black;
+        max-width: 375px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+}
