--- a/client/project-three-peapod/src/components/SignIn.css
+++ b/client/project-three-peapod/src/components/SignIn.css
@@ -34,7 +34,55 @@
   width: 272px;
   height: 52px;
   margin: 0 auto;
-  color: rgb(73, 126, 19);
+  color: rgb(255, 255, 255);
   border: 2px solid rgb(73, 126, 19);
   margin-top: 25px;
+}
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+
+    .form-container-sign-in {
+      display: flex;
+      flex-direction: column;
+      width: 90vw;
+      height: 80vh;
+      margin: 5vh 0;
+    }
+    
+    .form-container-sign-in  h3{
+      font-size: 32px;
+      margin: 0 auto;
+      padding: 30px 0;
+    }
+    
+    .form-sign-in{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+    }
+    
+    .form-sign-in label {
+      font-size: 18px;
+    }
+    
+    .form-sign-in input {
+      width: 32vw;
+      height: 6vh;
+      margin-bottom: 20px;
+    }
+    
+    .sign-in{
+      font-size: 24px;
+      width: 230px;
+      height: 52px;
+      margin: 0 auto;
+      color: rgb(255, 255, 255);
+      border: 2px solid rgb(73, 126, 19);
+      margin-top: 25px;
+    }
 }
