--- a/client/project-three-peapod/src/components/ProductsContainer.css
+++ b/client/project-three-peapod/src/components/ProductsContainer.css
@@ -63,6 +63,7 @@
 
 .side-nav-section {
   width: 15%;
+  /* border-right: 2px solid black; */
 }
 
 .main-section {
@@ -82,4 +83,68 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+
+.component-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  background-color: #2D2D2D;
+  font-weight: bolder;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  }
+
+.containter-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.headline {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+  margin: 2px 2px;
+}
+
+.entire-middle-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.side-nav-section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-gallery {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 75%;
+}
+
 }
