--- a/client/project-three-peapod/src/components/ProductEdit.css
+++ b/client/project-three-peapod/src/components/ProductEdit.css
@@ -92,3 +92,109 @@ form.edit-form2 {
   margin-bottom: 20px;
   margin: 0 auto;
 }
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) {
+
+    .product-edit {
+      display: flex;
+      flex-direction: column;
+      width: 95vw;
+      height: 95vh;
+      margin: 0 auto;
+    
+    }
+    
+    .header{
+      display: flex;
+      justify-content: center;
+      margin-top: 15px; 
+      margin-bottom: 0px;
+    }
+    
+    .edit-product-image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 40vh;
+      margin:0 0;
+    }
+    
+    .image-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 50vw;
+      margin: 0 auto;
+      padding: 10px 0;
+    }
+    
+    .image-container form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+      margin-top: 25px;
+    }
+    
+    .edit-form2 {
+      width: 50vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+    
+    form.edit-form2 {
+      width: 94vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0px;
+    }
+    
+    .save-button {
+      font-size: 14px;
+      width: 152px;
+      height: 42px;
+      margin: 15px auto;
+      color: rgb(73, 126, 19);
+      border: 2px solid rgb(73, 126, 19);
+      background-color: rgb(255,255,255);
+      
+    }
+    
+    .label {
+      display: flex;
+      justify-content: center;
+      font-size: 18px;
+      margin: 15px auto;
+      font-weight: bold; 
+    }
+    
+    .edit-input-image-link {
+      width: 42vw;
+      height: 6vh;
+      margin-bottom: 20px;
+      margin: 0 auto;
+    }
+    
+    .textarea-title {
+      width: 42vw;
+      height: 6vh;
+      margin-bottom: 20px;
+      margin: 0 auto;
+    }
+    
+    .textarea-description {
+      text-align: center;
+      width: 42vw;
+      height: 6vh;
+      margin-bottom: 20px;
+      margin: 0 auto;
+    }
+
+}
