--- a/client/project-three-peapod/src/components/shared/Footer.css
+++ b/client/project-three-peapod/src/components/shared/Footer.css
@@ -1,3 +1,11 @@
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+
+
+
 .main-footer {
     display: flex;
     flex-direction: row;
@@ -5,7 +13,6 @@
     justify-content: space-around;
     font-family: 'Roboto', sans-serif;
     color: black;
-
 }
 
 .left {
@@ -27,6 +34,7 @@
     justify-content: space-around;
     padding-left: 250px;
     padding-right: 250px;
+   
    
 }
 
@@ -50,8 +58,71 @@
     flex-direction: column;
     list-style: none;
     justify-content: center;
-    align-items: center;  
-   
+    align-items: center;    
+}
 }
 
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+    .main-footer {
+        display: flex;
+        flex-direction: row;
+        justify-items: center;
+        justify-content: space-around;
+        font-family: 'Roboto', sans-serif;
+        color: black;
+        width: 100%;
+        font-size: min(10px, 15px);
+    }
+    .left {
+        list-style: none;
+    }
+    
+    .middle {
+        list-style: none;
+    }
+    
+    .right {
+        list-style: none;
+    }
+
+    .social-icons {
+        color: #58782C; 
+        display: flex;
+        justify-content: center;
+        justify-content: space-around;
+        size: 10px;
+       
+    }
+    
+    .legal-list {
+        font-family: 'Roboto', sans-serif;
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        justify-content: center;
+        padding-top: 5px;
+        font-size: min(10px, 15px);
+       
+    } 
+    .legal-term {
+        font-family: 'Roboto', sans-serif;
+        padding-right: 30px;
+    }
+    
+    .copyright {
+        font-family: 'Roboto', sans-serif;
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        justify-content: center;
+        align-items: center;  
+        font-size: min(5px, 10px);  
+    }
+
+}
 
