--- a/client/project-three-peapod/src/components/ShoppingList.css
+++ b/client/project-three-peapod/src/components/ShoppingList.css
@@ -1,3 +1,8 @@
+.shopping-list-container {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+ }
 
 .shopping-bar {
   display: flex;
@@ -11,10 +16,11 @@
   text-align: center;
 }
 
-.back-button {
+.back-shop-button {
    width: 45px;
    height: 45px;
-   margin-left: 10px;
+   display: flex;
+   justify-content: flex-start;
    padding-top: 10px;
 
  }
@@ -22,7 +28,7 @@
 .createNew {
    border: 1px solid #f4f3f4;
    background-color: #f5f5f5;
-   width: 300px;
+   width: 320px;
    margin-left: 0;
    margin-top: 0px;
 }
@@ -32,26 +38,30 @@
    font-size: 19px;
    font-weight: bold;
    color: #454545;
+   padding-left: 10px;
+   display: inline-block
    
 }
 .essentials {
    padding-right: 30px;
-   font-family: 'Roboto', sans-serif;
-   font-size: 10px;
+   padding-bottom: 15px;
 }
+
 .essentials-input {
-   height: 20px;
-   padding-top: 18px;
+   height: 15px;
+   padding-top: 20px;
    margin-left: 10px;
-   margin-bottom: 10px;
+   font-family: 'Roboto', sans-serif;
+   color: #454545;
+   font-size: 15px;
 
 }
 
 .create {
-   height: 40px;
-   width: 60px;
+   height: 33px;
+   width: 75px;
    padding-left: 10px;
-   padding-top: 10px;
+   padding-top: 15px;
 }
 
  .create-a-list h2 { 
@@ -86,3 +96,87 @@
    margin-top: -20px
     
  }
+
+ @media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+  
+   .shopping-list-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   
+    }
+   
+   .shopping-bar {
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     color: white;
+     background-color: #2D2D2D;
+     font-weight: bolder;
+     font-size: 18px;
+     font-family: 'Roboto', sans-serif; 
+     text-align: center;
+   }
+   
+   .back-shop-button {
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: flex-start;
+      padding-top: 5px;
+    }
+
+    .createNew {
+      border: 1px solid #f4f3f4;
+      background-color: #f5f5f5;
+      width: 100%;
+      margin-left: 0;
+      margin-top: 0px;
+   }
+   
+   .createNew p{
+      font-family: 'Roboto', sans-serif;
+      font-size: 19px;
+      font-weight: bold;
+      color: #454545;
+      padding-left: 10px;
+      
+   }
+   .essentials {
+      padding-right: 30px;
+      padding-bottom: 30px;
+   }
+   .essentials-input {
+      height: 15px;
+      padding-top: 20px;
+      margin-left: 10px;
+      font-family: 'Roboto', sans-serif;
+      font-size: 15px;
+   }
+
+
+.create-a-list h2 {
+   font-size: 20px;
+}
+
+
+.line {
+   width: 250px;
+}
+
+.create-a-list p{
+   font-size: 15px;
+
+}
+
+.create-a-list h4 {
+   font-size: 15px;
+}
+
+
+}
