adjusted chat mobile css

--- a/client/project-three-peapod/src/components/shared/Chat.css
+++ b/client/project-three-peapod/src/components/shared/Chat.css
@@ -11,3 +11,17 @@ justify-content: flex-end;
     height: 40%;
     width: 40%;
 }
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+
+    .box {
+        height: 90%;
+        width: 90%;
+    }
+
+  }
