--- a/client/project-three-peapod/src/components/shared/Footer.css
+++ b/client/project-three-peapod/src/components/shared/Footer.css
@@ -1,8 +1,8 @@
-@media screen 
+/* @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
+  and (min-resolution: 192dpi) {  */
 
 
 
@@ -60,7 +60,7 @@
     justify-content: center;
     align-items: center;    
 }
-}
+
 
 @media only screen 
   and (min-device-width: 375px) 
@@ -124,5 +124,5 @@
         font-size: min(5px, 10px);  
     }
 
-}
+ } 
 
